# dut-ai-manager

./: .env.template  .gitignore  ERRORS.md  Makefile  docker-compose.yml  main.py  package.json  pyproject.toml  test_db.py  test_zalo.py
backend/: Dockerfile  Makefile  mock_activity_data.py  pyproject.toml  run_titles.py  test_dates.py  test_db.py  test_entity2.py  test_leaderboard.py  test_team.py  test_types.py  test_usecase.py
backend/alembic/: env.py
backend/alembic/versions/: 04fcb161b253_add_team_and_team_member.py  053e3c2e8527_add_team_and_team_me1.py  0553d55b6399_change_date_to_datetime_for_activities.py  08b9d163b58d_add_is_deleted_to_base_model.py  10e21272fa32_add_team_and_team_member.py  1533e4e0432b_add_indexes.py  182b05fa9ef9_remove_date_from_permission_request.py  226397f44e99_add_billing_period_to_invoices.py  2d05fabe0ea9_add_homework_and_submissions.py  2e45ea41c61a_add_monthly_user_stats_table.py  34d5f201eeab_update_homework_status_enum.py  3c38054f3aad_.py  3ffe5a794212_add_updated_by_for_all_table.py  4291020226ce_fix_leader_checked_enum.py  4405c56add67_add_client_event_id_to_meeting_.py  4604c5a5dee4_change_role_name_to_string.py  4fbab330538b_.py  51abe17bcad4_add_meeting_and_meeting_participant_.py  609a56bbee52_add_created_by_to_timestampmixin.py  652f96f7da3b_change_date_to_datetime_for_activities.py  6706609c25d4_change_homework_status_to_string.py  68039e7ba86e_initial.py  6a76bbb01f68_update_homework_status_values.py  71e30cee170e_add_team_and_team_member.py  7300809d581f_fix_monthly_user_stats_table.py  757d8bc68a8a_add_file_url_to_homework.py  7e6084ddbc24_add_owner_id_and_drop_homework_assignees.py  823b59b28035_refactor_permission_request.py  8509ea4859ec_move_account_id_from_user_to_auth_as_.py  85f966468765_change_start_time_to_datetime_for_.py  88fd33baf664_add_feedback_to_submission.py  8c729ccd9345_add_team_and_team_member.py  a1b2c3d4e5f6_add_require_check_in_to_meetings.py  a7b8c9d0e1f2_add_completed_to_participantstatus_enum.py  b5eca9e80dcc_update_role_name_to_enum.py  bc466a293297_add_team_and_team_member.py  bcb89e1b71aa_add_zalo_bot_id_and_zalo_bind_code_to_.py  c0a1670f2d91_add_billing_table.py  c17079fb4333_add_billing_table.py  c24723e43a40_description.py  (+5 more)
backend/app/: main.py
backend/app/auth/: account_notification_handler.py  controller.py  deps.py  providers.py
backend/app/billing/: controller.py  providers.py  schemas.py
backend/app/bonus_point/: controller.py  deps.py  providers.py
backend/app/capacity/: controller.py  providers.py
backend/app/core/: config.py  container.py  context.py  database.py  deps.py  discord_service.py  events.py  logging_config.py  minio_service.py  permissions.py  repository_factory.py  scheduler.py  service_factory.py
backend/app/homework/: controller.py  deps.py  providers.py
backend/app/jobs/: __init__.py  activity_scoring_job.py  homework_checker_job.py  meeting_checker_job.py  monthly_title_job.py
backend/app/meeting/: controller.py  deps.py  providers.py  schemas.py
backend/app/middleware/: auth.py  logging.py
backend/app/models/: __init__.py  account.py  base.py  bonus_points.py  homework.py  homework_submission.py  meeting.py  permission.py  permission_request.py  role.py  role_api_key.py  role_permission.py  team.py  user.py  violation.py
backend/app/permission_request/: controller.py  deps.py  providers.py  schemas.py
backend/app/rbac/: controller.py  deps.py
backend/app/report/: controller.py  deps.py  providers.py  schemas.py
backend/app/schemas/: __init__.py  activity.py  auth.py  homework.py  meeting.py  report.py  team.py  (+5 more)
backend/scripts/: reset_password.py  update_participants_checkout.py  verify_restore.py  verify_restore_phase2.py  verify_soft_delete.py
backend/tests/: __init__.py  test_homework_checker.py
backend_v2/: Makefile  pyproject.toml
backend_v2/app/: main.py  settings.py
(+373 files in other folders)
