[project]
name = "dut-ai-manager-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dishka>=1.10.1",
    "fastapi>=0.136.1",
    "loguru>=0.7.3",
    "psycopg>=3.3.4",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "jwt>=1.4.0",
]
