[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.17.2",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "bcrypt<4.0.0",
    "fastapi>=0.128.0",
    "gunicorn>=24.1.1",
    "loguru>=0.7.3",
    "minio>=7.2.20",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "passlib>=1.7.4",
    "psycopg>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.21",
    "python-zalo-bot>=0.1.9",
    "uvicorn[standard]>=0.40.0",
    "dishka>=1.9.1",
    "sqlmodel>=0.0.38",
]

[tool.pylint.main]
extension-pkg-allow-list = ["jwt"]

[dependency-groups]
dev = [
    "bs4>=0.0.2",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "pip>=26.0.1",
    "ruff>=0.15.12",
    "selenium>=4.43.0",
    "ty>=0.0.29",
    "webdriver-manager>=4.0.2",
]


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B008", # do not perform function calls in argument defaults (common in FastAPI)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
