[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.17.2",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "bcrypt<4.0.0",
    "fastapi>=0.128.0",
    "gunicorn>=24.1.1",
    "loguru>=0.7.3",
    "minio>=7.2.20",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "passlib>=1.7.4",
    "psycopg>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.21",
    "python-zalo-bot>=0.1.9",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.40.0",
    "dependency-injector>=4.41.0",
    "dishka>=1.9.1",
    "greenlet>=3.3.2",
    "types-passlib>=1.7.7.20260211",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
    "flake8>=7.0.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]

[tool.pylint.main]
extension-pkg-allow-list = ["jwt"]
